--- a/app/assets/stylesheets/concepts.css.scss
+++ b/app/assets/stylesheets/concepts.css.scss
@@ -1,3 +1,45 @@
 // Place all the styles related to the Concepts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.concept-card {
+    margin-top: 100px;
+    max-width: 50em;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 50px;
+    padding-bottom: 25px;
+    border: 1px solid lightgray;
+    background-color: #EEEEEE;
+    border-radius: 5px;
+}
+
+.concept-hidden {
+    display: none;
+}
+
+.concept-next {
+    margin-top: 50px;
+    text-align: center;
+    font-size: 4em;
+}
+
+.show-answer {
+    text-align: center;
+    padding-top: 40px;
+}
+
+.answer {
+    text-align: center;
+    font-size: 3em;
+    display: none;
+}
+
+.position-viewer {
+    text-align: center;
+    font-size: 2em;
+}
+
+.btn:focus {
+  outline: none !important;
+}
