fixes buttons, chooses random concepts

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,11 +4,11 @@
     <div class="concept-card concept-hidden" data-position="<%= index %>">
         <p class="lead"><%= concept.question %></p>
         <p class="answer"><%= concept.answer %></p>
-        <p class="show-answer"><button class="btn btn-lg btn-success" href="#" role="button">Show Answer</button></p>
+        <p class="show-answer"><button class="btn btn-lg btn-success show-answer-button" href="#" role="button">Show Answer</button></p>
     </div>
 <% end %>
 
 <div class="concept-next">
-    <span class="glyphicon glyphicon-circle-arrow-right"></span>
+    <span class="glyphicon glyphicon-circle-arrow-right concept-next-button"></span>
 </div>
 <p class="position-viewer"><span class="current-position">1</span>/3</p>
