--- a/app/views/home/_concepts.js.erb
+++ b/app/views/home/_concepts.js.erb
@@ -1,9 +1,9 @@
 <script type='text/javascript'>
 $(document).ready(function() {
-    $('.show-answer').click(function(event) {
+    $('.show-answer-button').click(function(event) {
         event.preventDefault();
-        $(this).parent().children('.answer').show();
-        $(this).children().attr('disabled', true);
+        $(this).parent().parent().children('.answer').show();
+        $(this).attr('disabled', true);
     });
 
     $('.concept-card').first().show();
@@ -11,7 +11,7 @@ $(document).ready(function() {
     var current_position = 0;
     var total_count = <%= @concepts.present? ? @concepts.size : 0 %>;
 
-    $('.concept-next').click(function() {
+    $('.concept-next-button').click(function() {
         $('*[data-position="' + current_position + '"]').hide(); 
         if(current_position < total_count -1) {
             current_position += 1;
