adds ability to create concepts from app

--- a/app/assets/stylesheets/concepts.css.scss
+++ b/app/assets/stylesheets/concepts.css.scss
@@ -29,9 +29,9 @@
     background-color: #EEEEEE;
     padding: 10px;
     border-radius: 5px;
-    width: 400px;
-    height: 200px;
-    display: inline-block;
+    width: 450px;
+    height: 230px;
+    display: inline-table;
     text-align: center;
     margin: 25px;
 }
