--- a/app/views/home/_concepts.js.erb
+++ b/app/views/home/_concepts.js.erb
@@ -25,14 +25,44 @@ $(document).ready(function() {
         $('*[data-position="' + current_position + '"]').show(); 
     });
 
-    $('.delete-concept').unbind().click(function(e) {
+    function deleteConceptBind() {
+        $('.delete-concept').unbind().click(function(e) {
+            e.preventDefault();
+            $.ajax({
+                type: "DELETE",
+                url: "/concepts/"+$(this).parent().data('id'),
+                data: "authenticity_token="+AUTH_TOKEN
+            })
+            $(this).parent().hide("slow", function(){ $(this).remove(); })
+        });
+    };
+
+    deleteConceptBind();
+
+    $('.new-concept').unbind().click(function(e) {
         e.preventDefault();
         $.ajax({
-            type: "DELETE",
-            url: "/concepts/"+$(this).parent().data('id'),
-            data: "authenticity_token="+AUTH_TOKEN
+            type: "POST",
+            url: "/concepts/",
+            data: "authenticity_token=" + AUTH_TOKEN + "&" + $('#new-concept-form').serialize(),
+            success: function(text) {
+                $('.manage-page').append(' \
+                    <div class="concept-edit" data-id="' + text + '"> \
+                        <div class="concept-qa"> \
+                            <p><strong>Question</strong></p><p>' + $("#question").val() + '</p> \
+                            <p><strong>Answer</strong></p><p>' + $("#answer").val() + '</p> \
+                        </div> \
+                        <button class="btn btn-danger delete-concept" href="#" role="button">Delete</button> \
+                    </div> \
+                ');
+                deleteConceptBind();
+                $("#question").val('');
+                $("#answer").val('');
+            },
+            error: function() {
+
+            }
         })
-        $(this).parent().hide("slow", function(){ $(this).remove(); })
     });
 });
 </script>
