added some response quality buttons to the view and hooked them up to a controller action

--- a/app/assets/stylesheets/concepts.css.scss
+++ b/app/assets/stylesheets/concepts.css.scss
@@ -44,6 +44,11 @@
     padding-top: 40px;
 }
 
+.response-quality-options {
+    text-align: center;
+    display: none;
+}
+
 .answer {
     text-align: center;
     font-size: 3em;
