--- a/app/views/home/_concepts.js.erb
+++ b/app/views/home/_concepts.js.erb
@@ -4,11 +4,14 @@ $(document).ready(function() {
     $('.show-answer-button').click(function(event) {
         event.preventDefault();
         $(this).parent().parent().children('.answer').show();
-        $(this).attr('disabled', true);
+        $(this).hide();
+        $(this).parent().parent().children('.response-quality-options').show();
+        console.log('show answer');
     });
 
+
     var current_position = 0;
-    var total_count = <%= @user_concepts_to_learn.present? ? @user_concepts_to_learn.size : 0 %>;
+    var total_count = <%= @concepts_to_learn.present? ? @concepts_to_learn.size : 0 %>;
 
     $('.concept-card').first().show();
 
@@ -31,8 +34,8 @@ $(document).ready(function() {
                 type: "DELETE",
                 url: "/concepts/"+$(this).parent().data('id'),
                 data: "authenticity_token="+AUTH_TOKEN
-            })
-            $(this).parent().hide("slow", function(){ $(this).remove(); })
+            });
+            $(this).parent().hide("slow", function(){ $(this).remove(); });
         });
     };
 
@@ -61,7 +64,7 @@ $(document).ready(function() {
             error: function() {
 
             }
-        })
+        });
     });
 });
 </script>
