contoller now updates rep intervals and e factors based on input from client

--- a/app/views/home/_concepts.js.erb
+++ b/app/views/home/_concepts.js.erb
@@ -4,9 +4,8 @@ $(document).ready(function() {
     $('.show-answer-button').click(function(event) {
         event.preventDefault();
         $(this).parent().parent().children('.answer').show();
-        $(this).hide();
+        $(this).parent().hide();
         $(this).parent().parent().children('.response-quality-options').show();
-        console.log('show answer');
     });
 
 
