changed the name to yaad

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LearnFast</title>
+    <title>Yaad</title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
@@ -25,7 +25,7 @@
           <li data-page="manage-page"><a href="#" data-page="manage-page">Manage</a></li>
           <li><%= link_to "Log out", destroy_user_session_path, :method => :delete  %></li>
         </ul>
-        <h3 class="text-muted"><span class="title-half">Learn</span>Fast</h3>
+        <h3 class="text-muted"><span class="title-half">Yaad</span></h3>
       </div>
       <% if notice %>
         <p class="alert alert-success"><%= notice %></p>
