--- a/app/views/home/_concepts.js.erb
+++ b/app/views/home/_concepts.js.erb
@@ -27,7 +27,8 @@ $(document).ready(function() {
         $.ajax({
             type: "POST",
             url: "/concepts/",
-            data: "authenticity_token=" + AUTH_TOKEN + "&" + $('#new-concept-form').serialize(),
+            beforeSend: function(xhr) {xhr.setRequestHeader('X-CSRF-Token', $('meta[name="csrf-token"]').attr('content'))},
+            data: $('#new-concept-form').serialize(),
             success: function(text) {
                 $('.manage-page').append(' \
                     <div class="concept-edit" data-id="' + text + '"> \
