--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -52,7 +52,8 @@ function responseAjaxCall(conceptId,responseQuality){
       $.ajax({
           type: "PUT",
           url: "/concepts/"+conceptId,
-          data: "authenticity_token="+AUTH_TOKEN+"&response_quality="+responseQuality,
+          beforeSend: function(xhr) {xhr.setRequestHeader('X-CSRF-Token', $('meta[name="csrf-token"]').attr('content'))},
+          data: "response_quality="+responseQuality,
           success: function(){
             console.log('success');
           },
