--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,13 +27,13 @@
         <form role="form" id="new-concept-form">
             <div class="form-group">
                 <label for="question">Question</label>
-                <input type="text" class="form-control" id="question" name="question" placeholder="How many feet make a mile?">
+                <input type="text" class="form-control" id="question" name="question" placeholder="What is memoization?">
             </div>
             <div class="form-group">
                 <label for="answer">Answer</label>
-                <input type="text" class="form-control" id="answer" name="answer" placeholder="5,280">
+                <input type="text" class="form-control" id="answer" name="answer" placeholder="An optimization that caches the results of...">
             </div>
-            <button type="submit" class="btn btn-success new-concept">Create Card</button>
+            <button type="submit" class="btn btn-success new-concept">Create Concept</button>
         </form>
     </div>
     <% @concepts.each do |concept| %>
@@ -48,6 +48,54 @@
 </div>
 
 <script>
+$('.new-concept').click(function(e) {
+    e.preventDefault();
+    $.ajax({
+        type: "POST",
+        url: "/concepts/",
+        beforeSend: function(xhr) {xhr.setRequestHeader('X-CSRF-Token', $('meta[name="csrf-token"]').attr('content'))},
+        data: $('#new-concept-form').serialize(),
+        success: function(text) {
+            $('.manage-page').append(' \
+                <div class="concept-edit" data-id="' + text + '"> \
+                    <div class="concept-qa"> \
+                        <p><strong>Question</strong></p><p>' + $("#question").val() + '</p> \
+                        <p><strong>Answer</strong></p><p>' + $("#answer").val() + '</p> \
+                    </div> \
+                    <button class="btn btn-danger delete-concept" href="#" role="button">Delete</button> \
+                </div> \
+            ');
+            deleteConceptBind();
+            $("#question").val('');
+            $("#answer").val('');
+        },
+        error: function() {
+          alert("This concept could not be saved.");
+        }
+    });
+});
+
+$('.show-answer-button').click(function(event) {
+    event.preventDefault();
+    $(this).parent().parent().children('.answer').show();
+    $(this).parent().hide();
+    $(this).parent().parent().children('.response-quality-options').show();
+});
+
+function deleteConceptBind() {
+    $('.delete-concept').unbind().click(function(e) {
+        e.preventDefault();
+        $.ajax({
+            type: "DELETE",
+            url: "/concepts/"+$(this).parent().data('id'),
+            beforeSend: function(xhr) {xhr.setRequestHeader('X-CSRF-Token', $('meta[name="csrf-token"]').attr('content'))},
+        });
+        $(this).parent().hide("slow", function(){ $(this).remove(); });
+    });
+};
+
+deleteConceptBind();
+
 function responseAjaxCall(conceptId,responseQuality){
       $.ajax({
           type: "PUT",
@@ -75,6 +123,10 @@ var total_count = <%= @concepts_to_learn.present? ? @concepts_to_learn.size : 0 
 $('.concept-card').first().show();
 
 function nextConcept() {
+  // the three lines prevent us from saving a new concept for some reason
+    //if total_count == 0
+    //  return;
+    //}
     $('*[data-position="' + current_position + '"]').hide(); 
     if(current_position < total_count -1) {
         current_position += 1;
@@ -91,9 +143,12 @@ $('.concept-next-button').click(nextConcept);
 
 function clickEventsForResponseButtons(conceptId, responseQuality){
     event.preventDefault();
-    if ( parseInt(responseQuality) < 4 ) {toggleButtons('#incorrect-btn' + conceptId);}
-    responseAjaxCall(conceptId, responseQuality);
-    $('#incorrect-btn' + conceptId).parent().children().prop("disabled",true);
+    if ( parseInt(responseQuality) < 4 ) {
+        toggleButtons('#incorrect-btn' + conceptId);
+    } else {
+        responseAjaxCall(conceptId, responseQuality);
+        $('#incorrect-btn' + conceptId).parent().children().prop("disabled",true);
+    }
     nextConcept();
 };
 
