--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li class="active" data-page="learn-page"><a href="#">Learn</a></li>
+          <li class="active reloader" data-page="learn-page"><a href="#">Learn</a></li>
           <li data-page="manage-page"><a href="#" data-page="manage-page">Manage</a></li>
           <li><%= link_to "Log out", destroy_user_session_path, :method => :delete  %></li>
         </ul>
@@ -30,5 +30,11 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script>
+      $('.reloader').click(function(e){
+        e.preventDefault();
+        location.reload();    
+      });
+    </script>
   </body>
 </html>
