replaced text inputs with textareas

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,11 +27,11 @@
         <form role="form" id="new-concept-form">
             <div class="form-group">
                 <label for="question">Question</label>
-                <input type="text" class="form-control" id="question" name="question" placeholder="What is memoization?">
+                <textarea type="text" class="form-control" id="question" name="question" placeholder="What is memoization?" rows="2"></textarea>
             </div>
             <div class="form-group">
                 <label for="answer">Answer</label>
-                <input type="text" class="form-control" id="answer" name="answer" placeholder="An optimization that caches the results of...">
+                <textarea type="text" class="form-control" id="answer" name="answer" placeholder="An optimization that caches the results of functions without side effects to avoid computation costs." rows="4"></textarea>
             </div>
             <button type="submit" class="btn btn-success new-concept">Create Concept</button>
         </form>
